--- a/deployment/configuration.properties
+++ b/deployment/configuration.properties
@@ -1,4 +1,4 @@
 #Light control system: configuration
 #Sun Jan 15 00:35:46 UTC 2023
-lights = ACCF2387C68A@wlan1, ACCF2387D93E@wlan2
+lights = ACCF2387C68A@wlx9ca2f4714f89, ACCF2387D93E@wlx9ca2f4711900
 targetPoints = 10:30 ON 0 15, 11:30 OFF 64 0, 14 ON 40 16, 0 OFF 0 32
