--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,6 @@ max_line_length = 140
 [*.md]
 trim_trailing_whitespace = false
 
-[*.yml]
+[{*.yml,*.yaml}]
 indent_style = space
 indent_size = 2
