--- a/deployment/netplan/50-cloud-init.yaml
+++ b/deployment/netplan/50-cloud-init.yaml
@@ -1,48 +1,44 @@
-# This file is generated from information provided by
-# the datasource.  Changes to it will not persist across an instance.
-# To disable cloud-init's network configuration capabilities, write a file
-# /etc/cloud/cloud.cfg.d/99-disable-network-config.cfg with the following:
-# network: {config: disabled}
 network:
-    version: 2
-    renderer: networkd
-    ethernets:
-        eth0:
-            optional: true
-            dhcp4: false
-            addresses:
-              - 192.168.2.71/24
-            routes:
-                - to: default
-                  via: 192.168.2.1
-            nameservers:
-                addresses:
-                  - 8.8.8.8
-                  - 8.8.4.4
-    wifis:
-        wlan0:
-            optional: true
-            access-points:
-                "HomeWLAN":
-                    password: "XXX"
-        wlan1:
-            link-local:
-              - ipv4
-            optional: true
-            dhcp4: false
-            addresses:
-              - 10.10.100.101/24
-            access-points:
-                "Lead Dynamic_ACCF2387C68A":
-                    password: "0123456789"
-        wlan2:
-            link-local:
-              - ipv4
-            optional: true
-            dhcp4: false
-            addresses:
-              - 10.10.100.102/24
-            access-points:
-                "Lead Dynamic_ACCF2387D93E":
-                    password: "0123456789"
-
+  version: 2
+  renderer: networkd
+  ethernets:
+    eth0:
+      optional: true
+      dhcp4: false
+      addresses:
+        - 192.168.2.71/24
+      routes:
+        - to: default
+          via: 192.168.2.1
+      nameservers:
+        addresses:
+          - 8.8.8.8
+          - 8.8.4.4
+  wifis:
+    wlan0:
+      optional: true
+      access-points:
+        "HomeWLAN":
+          auth:
+            key-management: "psk"
+            password: "XXX"
+    wlx9ca2f4714f89:
+      link-local:
+        - ipv4
+      optional: true
+      dhcp4: false
+      addresses:
+        - 10.10.100.101/24
+      access-points:
+        "Lead Dynamic_ACCF2387C68A":
+          password: "0123456789"
+    wlx9ca2f4711900:
+      link-local:
+        - ipv4
+      optional: true
+      dhcp4: false
+      addresses:
+        - 10.10.100.102/24
+      access-points:
+        "Lead Dynamic_ACCF2387D93E":
+          password: "0123456789"
